2003-06-05  Matt Kraai  <kraai@alumni.cmu.edu>

	* java/lang/w_exp.c (o_threshold, u_threshold): Define only
	if _IEEE_LIBM is undefined.

2002-06-05  Loren J. Rittle  <ljrittle@acm.org>

	* libjava/include/posix.h (O_SYNC): Define if not available
	and a reasonable, perhaps more conservative, replacement exists.
	(O_DSYNC): Likewise.
	* java/io/natFileDescriptorPosix.cc (open): Revert last patch.

2003-06-05  Michael Koch  <konqueror@gmx.de>

	* javax/swing/plaf/BorderUIResource.java,
	javax/swing/plaf/basic/BasicDefaults.java,
	javax/swing/plaf/basic/BasicOptionPaneUI.java:
	More compile fixes for latest Border commit. I should not commit
	something in this heat here ...

2003-06-05  Michael Koch  <konqueror@gmx.de>

	* javax/swing/border/BevelBorder.java
	(BevelBorder): Removed.
	* javax/swing/border/EmptyBorder.java:
	Reformatted.
	(EmptyBorder): Removed.
	(getBorderInsets): Dont use l, r, t and b.
	* javax/swing/border/EtchedBorder.java
	(EtchedBorder): Removed.
	* javax/swing/border/LineBorder.java
	(LineBorder): Removed.
	* javax/swing/border/MatteBorder.java
	(MatteBorder): Removed.
	* javax/swing/border/TitledBorder.java
	(defaultBorder): Use other default for now.
	(defaultFont): Likewise.
	(defaultColor): Likewise.

2003-06-05  Michael Koch  <konqueror@gmx.de>

	* javax/swing/border/Border.java:
	New version from classpath.

2003-06-05  Michael Koch  <konqueror@gmx.de>

	* javax/swing/border/AbstractBorder.java,
	javax/swing/border/BevelBorder.java,
	javax/swing/border/CompoundBorder.java,
	javax/swing/border/EmptyBorder.java,
	javax/swing/border/EtchedBorder.java,
	javax/swing/border/LineBorder.java,
	javax/swing/border/MatteBorder.java,
	javax/swing/border/TitledBorder.java:
	New versions from Classpath.

2003-06-05  Michael Koch  <konqueror@gmx.de>

	* java/awt/Button.java,
	java/awt/Checkbox.java,
	java/awt/CheckboxMenuItem.java,
	java/awt/Choice.java,
	java/awt/Container.java,
	java/awt/Dialog.java,
	java/awt/EventQueue.java,